Bug 1970030 - Let input element keep a wheel event cancelable. r=edgar

When a user sets the pref dom.input.number_and_range_modified_by_mousewheel,
the input element needs to default prevent the wheel event to cancel scrolling.

Therefore it has to prevent the event from becoming uncancelable if there is no
passive listener.

Differential Revision: https://phabricator.services.mozilla.com/D253132